--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .header {
@@ -28,4 +29,9 @@ nav ul {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat();
 }
