--- a/style.css
+++ b/style.css
@@ -1,37 +1,38 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .header {
-    background-color: #011827;
-    ;
+  background-color: #011827;
 }
 
 .main {
-    background-color: antiquewhite;
+  background-color: antiquewhite;
 }
 
 .left {
-    background-color: beige;
+  background-color: beige;
 }
 
 .right {
-    background-color: bisque;
+  background-color: bisque;
 }
 
 .footer {
-    background-color: #011827;
+  background-color: #011827;
 }
 
 nav ul {
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat();
+  display: grid;
+  grid-template-columns: repeat();
 }
+
+/*# sourceMappingURL=style.css.map */
