--- a/style.css
+++ b/style.css
@@ -4,35 +4,75 @@
   box-sizing: border-box;
 }
 
+.container {
+  background-color: #011827;
+  display: grid;
+  grid-template-rows: repeat(17, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  height: 100%;
+  width: 100%;
+}
+
 .header {
-  background-color: #011827;
+  grid-row: 1/2;
+  grid-column: span 6;
 }
-
-.main {
-  background-color: antiquewhite;
+.header .header__logo__text {
+  display: flex;
+  align-items: center;
 }
-
-.left {
-  background-color: beige;
+.header .header__logo__text h1 {
+  color: #fff;
+  font-size: 1rem;
+  padding: auto;
 }
-
-.right {
-  background-color: bisque;
+.header .header__logo__text h1 span {
+  display: flex;
+  flex-direction: column;
 }
-
-.footer {
-  background-color: #011827;
+.header .header__logo__text .header__logo {
+  height: 82px;
+  width: 128px;
+  margin: 20px 20px 20px 20px;
+  float: left;
 }
-
-nav ul {
+.header nav {
+  display: none;
+}
+.header nav ul {
   display: flex;
   justify-content: space-evenly;
   list-style: none;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: repeat();
+.header__img {
+  grid-row: 2/4;
+  grid-column: span 6;
+  width: 100%;
+}
+
+.main {
+  grid-row: 4/10;
+  grid-column: span 6;
+  background-color: #FFF;
+}
+
+.about {
+  grid-row: 10/12;
+  grid-column: span 6;
+  background-color: #011827;
+}
+
+.collage {
+  grid-row: 12/16;
+  grid-column: span 6;
+  background-color: #FFF;
+}
+
+.footer {
+  grid-row: 16/18;
+  grid-column: span 6;
+  background-color: #011827;
 }
 
 /*# sourceMappingURL=style.css.map */
