--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
   background-color: #FFF;
   display: grid;
-  grid-template-rows: repeat(42, 1fr);
+  grid-template-rows: repeat(39, 1fr);
   grid-template-columns: repeat(6, 1fr);
   height: 100%;
   width: 100%;
@@ -24,16 +24,19 @@
 }
 .header .logo-container h1 {
   color: #fff;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 .header .logo-container h1 span {
   display: flex;
   flex-direction: column;
 }
 .header .logo-container .logo {
-  height: 82px;
-  width: 128px;
-  margin: 20px;
+  height: 100px;
+  width: 150px;
+  margin: 30px 0 0 30px;
 }
 .header nav {
   display: none;
@@ -62,17 +65,23 @@
   align-items: center;
 }
 .button-group button {
-  color: #000;
-  padding: 0 100px;
+  color: #011827;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: large;
+  padding: 0 60px;
   margin: 10px;
   border: 0;
-  border-radius: 0.1rem;
+  border-radius: 0.2rem;
   background-color: #8ACFE5;
   height: 4rem;
 }
 .button-group button:nth-child(2) {
   background-color: white;
-  color: #8ACFE5;
+  color: #36769D;
+  font-size: 0.9rem;
+  text-decoration: underline;
 }
 
 .review {
@@ -83,39 +92,58 @@
   align-items: center;
 }
 .review img {
+  float: left;
   margin: 20px;
   height: 64px;
   width: 64px;
 }
-.review span,
-.review p {
-  padding: 10px 20px 0 0;
+.review .review-text span {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.3rem;
+  padding: 0 25px 0 0;
+}
+.review .review-text p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  padding: 5px 20px 0 0;
+  font-size: 1.2rem;
+}
+
+h1 {
+  grid-row: 10/11;
+  grid-column: 1/7;
+  text-align: center;
+  font-weight: 200;
+  margin: 30px 10px 0 10px;
 }
 
 .popular-rooms {
-  grid-row: 11/16;
+  grid-row: 11/15;
   grid-column: 1/7;
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
 }
-.popular-rooms h1 {
-  position: absolute;
-  top: 950px;
-  left: 0;
-}
 .popular-rooms .room {
   min-width: 300px;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
-  height: 350px;
-  margin: 0 10px;
-}
-.popular-rooms .room img {
-  height: 150px;
-  width: 100%;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
+  height: 400px;
+  margin: 0 20px;
   border-radius: 0.3rem;
 }
+.popular-rooms .room img {
+  height: 180px;
+  width: 100%;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+}
 .popular-rooms .room h2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   padding-left: 10px;
 }
 .popular-rooms .room .rating {
@@ -127,54 +155,92 @@
   width: 16px;
 }
 .popular-rooms .room .participants {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   display: flex;
-  padding-left: 5rem;
+  padding-left: 1rem;
   padding-bottom: 15px;
+  font-size: 0.9rem;
 }
 .popular-rooms .room p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   white-space: normal;
-  padding: 10px 15px 0 15px;
+  padding: 0px 15px 10px 15px;
 }
 .popular-rooms .room button {
   color: #fff;
-  padding: 0 35px;
-  margin: 10px 0 0 128px;
+  padding: 0 30px;
+  margin: 5px 0 0 128px;
   border: none;
   border-radius: 0.2rem;
-  background-color: #ff0000;
+  background-color: #E3170A;
   height: 2.2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
   cursor: pointer;
 }
 
 .button-group-two {
-  grid-row: 16/18;
+  grid-row: 15/17;
   grid-column: 1/7;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.button-group-two button {
+  color: #011827;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: large;
+  padding: 0 60px;
+  margin: 10px;
+  border: 0;
+  border-radius: 0.2rem;
+  background-color: #8ACFE5;
+  height: 4rem;
+}
+.button-group-two button:nth-child(2) {
+  background-color: white;
+  color: #36769D;
+  font-size: 0.9rem;
+  text-decoration: underline;
+}
 
 .mini-footer {
-  grid-row: 18/24;
+  grid-row: 17/21;
   grid-column: 1/7;
   background-color: #011827;
   color: #FFF;
   text-align: center;
 }
 .mini-footer p {
-  padding: 60px 30px 10px 30px;
+  margin-top: 50px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  padding: 60px 30px 0px 30px;
   font-size: 1.4rem;
 }
 .mini-footer button {
   border: 1px solid #8ACFE5;
   color: #8ACFE5;
-  font-size: 1.3rem;
+  padding: 20px 50px 20px 50px;
   background-color: transparent;
+  border-radius: 0.3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.4rem;
   cursor: pointer;
 }
 
 .collage-image-one {
-  grid-row: 24/28;
+  grid-row: 21/23;
   grid-column: 1/7;
 }
 .collage-image-one img {
@@ -184,7 +250,7 @@
 }
 
 .collage-text-one {
-  grid-row: 28/31;
+  grid-row: 23/29;
   grid-column: 1/7;
   background-color: #FFF;
   text-align: center;
@@ -207,7 +273,7 @@
 }
 
 .collage-image-two {
-  grid-row: 31/36;
+  grid-row: 26/31;
   grid-column: 1/7;
 }
 .collage-image-two img {
@@ -217,7 +283,7 @@
 }
 
 .collage-text-two {
-  grid-row: 35/41;
+  grid-row: 33/35;
   grid-column: 1/7;
   background-color: #FFF;
   text-align: center;
@@ -240,7 +306,7 @@
 }
 
 .footer {
-  grid-row: 38/43;
+  grid-row: 35/40;
   grid-column: 1/7;
   background-color: #011827;
   color: #FFF;
