--- a/src/style.scss
+++ b/src/style.scss
@@ -51,16 +51,20 @@
 .container {
   background-color: #FFF;
   display: grid;
-  grid-template-rows: repeat(39, 1fr);
   grid-template-columns: repeat(6, 1fr);
   height: 100%;
   width: 100%;
+  
 }
 
 .header {
   background-color: #011827;
-  grid-row: 1 / 3;
+  grid-row: 1 / 2;
   grid-column: 1 / 7;
+
+  @media screen and (min-width: 800px) {
+    
+  }
 
   .logo-container {
     display: flex;
@@ -85,6 +89,9 @@
   }
 
   nav {
+    @media screen and (min-width: 800px) {
+    display: block;
+    }
     display: none;
 
     ul {
@@ -96,7 +103,7 @@
 }
 
 .header-image {
-  grid-row: 3 / 6;
+  grid-row: 2 / 6;
   grid-column: 1 / 7;
 
   img {
@@ -330,7 +337,7 @@ h1 {
 }
 
 .footer {
-  grid-row: 35 / 40;
+  grid-row: 35 / 36;
   grid-column: 1 / 7;
   background-color: #011827;
   color: #FFF;
