--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 .container {
   background-color: #FFF;
   display: grid;
-  grid-template-rows: repeat(39, 1fr);
   grid-template-columns: repeat(6, 1fr);
   height: 100%;
   width: 100%;
@@ -15,7 +14,7 @@
 
 .header {
   background-color: #011827;
-  grid-row: 1/3;
+  grid-row: 1/2;
   grid-column: 1/7;
 }
 .header .logo-container {
@@ -41,6 +40,11 @@
 .header nav {
   display: none;
 }
+@media screen and (min-width: 800px) {
+  .header nav {
+    display: block;
+  }
+}
 .header nav ul {
   display: flex;
   justify-content: space-evenly;
@@ -48,7 +52,7 @@
 }
 
 .header-image {
-  grid-row: 3/6;
+  grid-row: 2/6;
   grid-column: 1/7;
 }
 .header-image img {
@@ -306,7 +310,7 @@ h1 {
 }
 
 .footer {
-  grid-row: 35/40;
+  grid-row: 35/36;
   grid-column: 1/7;
   background-color: #011827;
   color: #FFF;
