--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
   background-color: #FFF;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   height: 100%;
   width: 100%;
 }
@@ -15,7 +15,7 @@
 .header {
   background-color: #011827;
   grid-row: 1/2;
-  grid-column: 1/7;
+  grid-column: 1/8;
 }
 .header .logo-container {
   display: flex;
@@ -30,7 +30,11 @@
 }
 .header .logo-container h1 span {
   display: flex;
-  flex-direction: column;
+}
+@media screen and (min-width: 800px) {
+  .header .logo-container h1 span {
+    display: inline;
+  }
 }
 .header .logo-container .logo {
   height: 100px;
@@ -53,7 +57,7 @@
 
 .header-image {
   grid-row: 2/6;
-  grid-column: 1/7;
+  grid-column: 1/8;
 }
 .header-image img {
   width: 100%;
@@ -62,11 +66,17 @@
 }
 
 .button-group {
-  grid-row: 6/8;
-  grid-column: 1/7;
+  grid-row: 5/6;
+  grid-column: 4/5;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 800px) {
+  .button-group {
+    flex-direction: row-reverse;
+    align-items: center;
+  }
 }
 .button-group button {
   color: #011827;
@@ -87,10 +97,17 @@
   font-size: 0.9rem;
   text-decoration: underline;
 }
+@media screen and (min-width: 800px) {
+  .button-group button:nth-child(2) {
+    background-color: #E3170A;
+    color: #ffffff;
+    text-decoration: none;
+  }
+}
 
 .review {
   grid-row: 8/10;
-  grid-column: 1/7;
+  grid-column: 1/8;
   background-color: #FFF;
   display: flex;
   align-items: center;
@@ -118,7 +135,7 @@
 
 h1 {
   grid-row: 10/11;
-  grid-column: 1/7;
+  grid-column: 1/8;
   text-align: center;
   font-weight: 200;
   margin: 30px 10px 0 10px;
@@ -126,7 +143,7 @@ h1 {
 
 .popular-rooms {
   grid-row: 11/15;
-  grid-column: 1/7;
+  grid-column: 1/8;
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
@@ -190,7 +207,7 @@ h1 {
 
 .button-group-two {
   grid-row: 15/17;
-  grid-column: 1/7;
+  grid-column: 1/8;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -214,10 +231,17 @@ h1 {
   font-size: 0.9rem;
   text-decoration: underline;
 }
+@media screen and (min-width: 800px) {
+  .button-group-two button:nth-child(2) {
+    background-color: #E3170A;
+    color: #ffffff;
+    text-decoration: none;
+  }
+}
 
 .mini-footer {
   grid-row: 17/21;
-  grid-column: 1/7;
+  grid-column: 1/8;
   background-color: #011827;
   color: #FFF;
   text-align: center;
@@ -245,7 +269,7 @@ h1 {
 
 .collage-image-one {
   grid-row: 21/23;
-  grid-column: 1/7;
+  grid-column: 1/8;
 }
 .collage-image-one img {
   width: 100%;
@@ -255,7 +279,7 @@ h1 {
 
 .collage-text-one {
   grid-row: 23/29;
-  grid-column: 1/7;
+  grid-column: 1/8;
   background-color: #FFF;
   text-align: center;
 }
@@ -278,7 +302,7 @@ h1 {
 
 .collage-image-two {
   grid-row: 26/31;
-  grid-column: 1/7;
+  grid-column: 1/8;
 }
 .collage-image-two img {
   width: 100%;
@@ -288,7 +312,7 @@ h1 {
 
 .collage-text-two {
   grid-row: 33/35;
-  grid-column: 1/7;
+  grid-column: 1/8;
   background-color: #FFF;
   text-align: center;
 }
@@ -311,7 +335,7 @@ h1 {
 
 .footer {
   grid-row: 35/36;
-  grid-column: 1/7;
+  grid-column: 1/8;
   background-color: #011827;
   color: #FFF;
   text-align: center;
