--- a/src/style.scss
+++ b/src/style.scss
@@ -56,7 +56,7 @@
 .container {
   background-color: #FFF;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   height: 100%;
   width: 100%;
   
@@ -65,7 +65,7 @@
 .header {
   background-color: #011827;
   grid-row: 1 / 2;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
 
   .logo-container {
     display: flex;
@@ -107,7 +107,8 @@
 
 .header-image {
   grid-row: 2 / 6;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
+  position: relative;
 
   img {
     width: 100%;
@@ -119,10 +120,12 @@
 .button-group {
   @media screen and (min-width: 800px) {
     flex-direction: row-reverse;
-    align-items: center;
+    justify-content: center;
+    grid-row: 5 / 7;
+    z-index: 10;
     }
-  grid-row: 5 / 6;
-  grid-column: 4 / 5;
+  grid-row: 6 / 7;
+  grid-column: 1 / 7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -132,7 +135,7 @@
 
 .review {
   grid-row: 8 / 10;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   background-color: #FFF;
   display: flex;
   align-items: center;
@@ -162,7 +165,7 @@
 
 h1 {
   grid-row: 10 / 11;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   text-align: center;
   font-weight: 200;
   margin: 30px 10px 0 10px;
@@ -171,7 +174,7 @@ h1 {
 
 .popular-rooms {
   grid-row: 11 / 15;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
@@ -234,8 +237,13 @@ h1 {
 }
 
 .button-group-two {
+  @media screen and (min-width: 800px) {
+    flex-direction: row-reverse;
+    justify-content: center;
+    }
+
   grid-row: 15 / 17;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -245,7 +253,7 @@ h1 {
 
 .mini-footer {
   grid-row: 17 / 21;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   background-color: #011827;
   color: #FFF;
   text-align: center;
@@ -270,8 +278,13 @@ h1 {
 }
 
 .collage-image-one {
+  @media screen and (min-width: 800px) {
+      grid-row: 21 / 23;
+      grid-column: 1 / 4;
+    }
+
   grid-row: 21 / 23;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
 
   img {
     width: 100%;
@@ -281,8 +294,13 @@ h1 {
 }
 
 .collage-text-one {
-  grid-row: 23 / 29;
-  grid-column: 1 / 8;
+  @media screen and (min-width: 800px) {
+    grid-row: 21 / 23;
+    grid-column: 4 / 7;
+  }
+
+  grid-row: 23 / 26;
+  grid-column: 1 / 7;
   background-color: #FFF;
   text-align: center;
 
@@ -307,8 +325,13 @@ h1 {
 }
 
 .collage-image-two {
+  @media screen and (min-width: 800px) {
+    grid-row: 26 / 31;
+    grid-column: 4 / 7;
+  }
+
   grid-row: 26 / 31;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
 
   img {
     width: 100%;
@@ -318,8 +341,13 @@ h1 {
 }
 
 .collage-text-two {
+  @media screen and (min-width: 800px) {
+    grid-row: 26 / 31;
+    grid-column: 1 / 4;
+  }
+
   grid-row: 33 / 35;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   background-color: #FFF;
   text-align: center;
 
@@ -345,7 +373,7 @@ h1 {
 
 .footer {
   grid-row: 35 / 36;
-  grid-column: 1 / 8;
+  grid-column: 1 / 7;
   background-color: #011827;
   color: #FFF;
   text-align: center;
