--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
   background-color: #FFF;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   height: 100%;
   width: 100%;
 }
@@ -15,7 +15,7 @@
 .header {
   background-color: #011827;
   grid-row: 1/2;
-  grid-column: 1/8;
+  grid-column: 1/7;
 }
 .header .logo-container {
   display: flex;
@@ -57,7 +57,8 @@
 
 .header-image {
   grid-row: 2/6;
-  grid-column: 1/8;
+  grid-column: 1/7;
+  position: relative;
 }
 .header-image img {
   width: 100%;
@@ -66,8 +67,8 @@
 }
 
 .button-group {
-  grid-row: 5/6;
-  grid-column: 4/5;
+  grid-row: 6/7;
+  grid-column: 1/7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,7 +76,9 @@
 @media screen and (min-width: 800px) {
   .button-group {
     flex-direction: row-reverse;
-    align-items: center;
+    justify-content: center;
+    grid-row: 5/7;
+    z-index: 10;
   }
 }
 .button-group button {
@@ -107,7 +110,7 @@
 
 .review {
   grid-row: 8/10;
-  grid-column: 1/8;
+  grid-column: 1/7;
   background-color: #FFF;
   display: flex;
   align-items: center;
@@ -135,7 +138,7 @@
 
 h1 {
   grid-row: 10/11;
-  grid-column: 1/8;
+  grid-column: 1/7;
   text-align: center;
   font-weight: 200;
   margin: 30px 10px 0 10px;
@@ -143,7 +146,7 @@ h1 {
 
 .popular-rooms {
   grid-row: 11/15;
-  grid-column: 1/8;
+  grid-column: 1/7;
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
@@ -207,10 +210,16 @@ h1 {
 
 .button-group-two {
   grid-row: 15/17;
-  grid-column: 1/8;
+  grid-column: 1/7;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 800px) {
+  .button-group-two {
+    flex-direction: row-reverse;
+    justify-content: center;
+  }
 }
 .button-group-two button {
   color: #011827;
@@ -241,7 +250,7 @@ h1 {
 
 .mini-footer {
   grid-row: 17/21;
-  grid-column: 1/8;
+  grid-column: 1/7;
   background-color: #011827;
   color: #FFF;
   text-align: center;
@@ -269,7 +278,13 @@ h1 {
 
 .collage-image-one {
   grid-row: 21/23;
-  grid-column: 1/8;
+  grid-column: 1/7;
+}
+@media screen and (min-width: 800px) {
+  .collage-image-one {
+    grid-row: 21/23;
+    grid-column: 1/4;
+  }
 }
 .collage-image-one img {
   width: 100%;
@@ -278,10 +293,16 @@ h1 {
 }
 
 .collage-text-one {
-  grid-row: 23/29;
-  grid-column: 1/8;
+  grid-row: 23/26;
+  grid-column: 1/7;
   background-color: #FFF;
   text-align: center;
+}
+@media screen and (min-width: 800px) {
+  .collage-text-one {
+    grid-row: 21/23;
+    grid-column: 4/7;
+  }
 }
 .collage-text-one h2 {
   margin: 20px 0;
@@ -302,7 +323,13 @@ h1 {
 
 .collage-image-two {
   grid-row: 26/31;
-  grid-column: 1/8;
+  grid-column: 1/7;
+}
+@media screen and (min-width: 800px) {
+  .collage-image-two {
+    grid-row: 26/31;
+    grid-column: 4/7;
+  }
 }
 .collage-image-two img {
   width: 100%;
@@ -312,9 +339,15 @@ h1 {
 
 .collage-text-two {
   grid-row: 33/35;
-  grid-column: 1/8;
+  grid-column: 1/7;
   background-color: #FFF;
   text-align: center;
+}
+@media screen and (min-width: 800px) {
+  .collage-text-two {
+    grid-row: 26/31;
+    grid-column: 1/4;
+  }
 }
 .collage-text-two h2 {
   margin: 20px 0;
@@ -335,7 +368,7 @@ h1 {
 
 .footer {
   grid-row: 35/36;
-  grid-column: 1/8;
+  grid-column: 1/7;
   background-color: #011827;
   color: #FFF;
   text-align: center;
