--- a/src/style.scss
+++ b/src/style.scss
@@ -84,7 +84,6 @@
 
       color: #fff;
       font-size: 1.5rem;
-      @include roboto-bold;
       margin-left: 1rem;
 
       span {
@@ -93,6 +92,7 @@
         }
 
         display: flex;
+        @include roboto-bold;
       }
     }
 
@@ -110,7 +110,6 @@
     display: none;
     margin-bottom: 1.5rem;
 
-
     ul {
       display: flex;
       justify-content: space-evenly;
@@ -122,6 +121,7 @@
         list-style: none;
         font-size: 1.2rem;
         text-decoration: none;
+        @include roboto-bold;
       }
     }
   }
@@ -205,12 +205,17 @@
   overflow-x: auto;
   white-space: nowrap;
 
+
   .room {
     min-width: 300px;
     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
     height: 400px;
-    margin: 0 1rem 2.5rem 0;
+    margin: 0 0rem 3rem 2rem;
     border-radius: 0.3rem;
+
+    &:nth-child(3) {
+      margin-right: 2rem;
+    }
 
     img {
       height: 180px;
@@ -270,7 +275,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
 
   @include button-group;
 }
@@ -406,6 +411,7 @@
   background-color: #011827;
   color: #FFF;
   text-align: start;
+  margin-top: 8rem;
 
   h2 {
     margin: 0;
