--- a/style.css
+++ b/style.css
@@ -189,11 +189,17 @@
   white-space: nowrap;
 }
 .popular-rooms .room {
-  min-width: 370px;
+  min-width: 320px;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
-  height: 450px;
+  height: 420px;
   margin: 0 0rem 4rem 2rem;
   border-radius: 0.3rem;
+}
+@media screen and (min-width: 800px) {
+  .popular-rooms .room {
+    min-width: 500px;
+    height: 500px;
+  }
 }
 .popular-rooms .room:nth-child(3) {
   margin-right: 2rem;
@@ -333,15 +339,13 @@
   grid-row: 23/26;
   grid-column: 1/7;
   background-color: #FFF;
-  text-align: start;
-  margin: 1.5rem 0 2rem 0;
 }
 @media screen and (min-width: 800px) {
   .collage-text-one {
     grid-row: 21/23;
     grid-column: 4/7;
     text-align: center;
-    margin: 4rem 4rem 0 4rem;
+    margin: 5rem 5rem 0 6rem;
   }
 }
 .collage-text-one h2 {
@@ -351,23 +355,26 @@
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: normal;
-  float: left;
+  text-align: left;
 }
 .collage-text-one h3 {
   margin: 0 0 0 1rem;
   font-size: 1.4rem;
-  float: left;
+  text-align: left;
 }
 .collage-text-one button {
   color: #fff;
-  padding: 0 35px;
-  margin: 10px 0;
+  height: 70px;
+  width: 300px;
   border: none;
   border-radius: 0.2rem;
-  background-color: #ff0000;
-  height: 2.2rem;
-  margin: 2rem 0 0 1.5rem;
-  text-align: left;
+  background-color: #E3170A;
+  margin: 1rem 0 0 1rem;
+  float: left;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.2rem;
 }
 
 .collage-image-two {
@@ -404,23 +411,29 @@
 .collage-text-two h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
+  font-size: 2rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: normal;
+  text-align: left;
 }
 .collage-text-two h3 {
   margin: 0 0 0 1rem;
+  text-align: left;
 }
 .collage-text-two button {
   color: #fff;
-  padding: 0 35px;
-  margin: 10px 0;
+  height: 70px;
+  width: 300px;
   border: none;
   border-radius: 0.2rem;
-  background-color: #ff0000;
-  height: 2.2rem;
-  margin: 2rem 0 0 1.5rem;
-  text-align: left;
+  background-color: #E3170A;
+  margin: 1rem 0 0 1rem;
+  float: left;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.2rem;
 }
 
 .footer {
