--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@
   grid-row: 1/2;
   grid-column: 1/7;
 }
+@media screen and (min-width: 800px) {
+  .header {
+    font-size: 3rem;
+    margin-top: auto;
+  }
+}
 .header .logo-container {
   display: flex;
   align-items: center;
@@ -28,17 +34,10 @@
 .header .logo-container h1 {
   color: #fff;
 }
-@media screen and (min-width: 800px) {
-  .header .logo-container h1 {
-    font-size: 3rem;
-    margin-top: auto;
-  }
-}
 .header .logo-container h1 span {
   display: flex;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: 2.5rem;
 }
 @media screen and (min-width: 800px) {
@@ -73,7 +72,6 @@
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
 }
 
 .header-image {
@@ -96,14 +94,6 @@
   flex-direction: column;
   align-items: center;
   margin: 2rem 0 2.5rem 0;
-}
-@media screen and (min-width: 800px) {
-  .button-group {
-    flex-direction: row-reverse;
-    justify-content: center;
-    grid-row: 5/7;
-    z-index: 10;
-  }
 }
 .button-group button {
   color: #011827;
@@ -131,6 +121,14 @@
     color: #ffffff;
     text-decoration: none;
     margin-right: 1rem;
+  }
+}
+@media screen and (min-width: 800px) {
+  .button-group {
+    flex-direction: row-reverse;
+    justify-content: center;
+    grid-row: 5/7;
+    z-index: 10;
   }
 }
 
@@ -238,7 +236,6 @@
   color: #fff;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: 1rem;
   padding: 13px 35px 33px 35px;
   float: right;
@@ -256,12 +253,6 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 5rem;
-}
-@media screen and (min-width: 800px) {
-  .button-group-two {
-    flex-direction: row-reverse;
-    justify-content: center;
-  }
 }
 .button-group-two button {
   color: #011827;
@@ -291,6 +282,12 @@
     margin-right: 1rem;
   }
 }
+@media screen and (min-width: 800px) {
+  .button-group-two {
+    flex-direction: row-reverse;
+    justify-content: center;
+  }
+}
 
 .mini-footer {
   grid-row: 17/21;
@@ -313,7 +310,6 @@
   border-radius: 0.3rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: 1.4rem;
   cursor: pointer;
   margin-bottom: 8rem;
@@ -354,7 +350,6 @@
   font-size: 2rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   text-align: left;
 }
 .collage-text-one h3 {
@@ -373,7 +368,6 @@
   float: left;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: 1.2rem;
 }
 
@@ -414,7 +408,6 @@
   font-size: 2rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   text-align: left;
 }
 .collage-text-two h3 {
@@ -432,7 +425,6 @@
   float: left;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: 1.2rem;
 }
 
