--- a/src/style.scss
+++ b/src/style.scss
@@ -210,19 +210,18 @@
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
-  // justify-content: center;
 
 
   .room {
-    min-width: 320px;
+    width: auto;
     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
-    height: 420px;
+    height: auto;
     margin: 0 0rem 4rem 2rem;
     border-radius: 0.3rem;
 
     @media screen and (min-width: 800px) {
-      min-width: 500px;
-      height: 500px;
+      width: 700px;
+      height: auto;
     }
 
     &:nth-child(3) {
@@ -271,7 +270,7 @@
       font-size: 1rem;
       padding: 13px 35px 33px 35px;
       float: right;
-      margin-right: 1rem;
+      margin: 1rem;
       border: none;
       border-radius: 0.2rem;
       background-color: #E3170A;
