--- a/style.css
+++ b/style.css
@@ -323,41 +323,41 @@
   .collage-image-one {
     grid-row: 21/23;
     grid-column: 1/4;
+    align-items: stretch;
   }
 }
 .collage-image-one img {
   width: 100%;
   height: auto;
-  object-fit: cover;
 }
 
-.collage-text-one {
+.collage-text {
   grid-row: 23/26;
   grid-column: 1/7;
   background-color: #FFF;
 }
 @media screen and (min-width: 800px) {
-  .collage-text-one {
+  .collage-text {
     grid-row: 21/23;
     grid-column: 4/7;
     text-align: center;
-    margin: 5rem 5rem 0 6rem;
+    margin: 5rem 8rem 0 8rem;
   }
 }
-.collage-text-one h2 {
+.collage-text h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
-  font-size: 2rem;
+  font-size: 2.1rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-align: left;
 }
-.collage-text-one h3 {
+.collage-text h3 {
   margin: 0 0 0 1rem;
-  font-size: 1.4rem;
+  font-size: 1.9rem;
   text-align: left;
 }
-.collage-text-one button {
+.collage-text button {
   color: #fff;
   height: 70px;
   width: 300px;
@@ -368,7 +368,8 @@
   float: left;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  margin-top: 1rem;
 }
 
 .collage-image-two {
@@ -399,19 +400,20 @@
     grid-row: 26/31;
     grid-column: 1/4;
     text-align: center;
-    margin: 4rem 4rem 0 4rem;
+    margin: 5rem 8rem 0 8rem;
   }
 }
 .collage-text-two h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
-  font-size: 2rem;
+  font-size: 2.1rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-align: left;
 }
 .collage-text-two h3 {
   margin: 0 0 0 1rem;
+  font-size: 1.9rem;
   text-align: left;
 }
 .collage-text-two button {
